--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ authors = ["Henry Carlson <henry.carlson@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+bytes = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 specs = "0.15"
 toml = "0.5"
+tokio = "0.1"
