--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bytes = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
 log = "0.4"
+nalgebra = "0.18"
 serde = { version = "1.0", features = ["derive"] }
 specs = "0.15"
 toml = "0.5"
