Move logging configuration to core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2018"
 
 [dependencies]
 bytes = "0.4"
+chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
+fern = "0.5"
 log = "0.4"
 nalgebra = "0.18"
 serde = { version = "1.0", features = ["derive"] }
