--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
 fern = "0.5"
+lazy_static = "~1.4"
 log = "0.4"
 nalgebra = "0.19"
 serde = { version = "1.0", features = ["derive"] }
