--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Henry Carlson <henry.carlson@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-bytes = "0.4"
+bytes = "0.5"
 chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
@@ -16,5 +16,6 @@ nalgebra = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 specs = "0.15"
 toml = "0.5"
-tokio = "0.1"
+tokio = "0.2"
+tokio-util = { version = "0.2", features = ["codec", "udp"] }
 uuid = "0.8"
